# llama-tui

./: CMakeLists.txt  readme-ftxui.md  readme.md
src/: llm.cpp  llm.hpp  main.cpp
